// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controllerMiddleware should set and keep references 1`] = `
Test {
  "agent": undefined,
  "cache": undefined,
  "handler": Object {
    "test": [Circular],
  },
  "issuer": undefined,
  "keystore": undefined,
  "logger": undefined,
  "metadata": undefined,
  "metrics": undefined,
  "repository": undefined,
  "token": undefined,
}
`;

exports[`controllerMiddleware should set handler on context 1`] = `
Test {
  "agent": undefined,
  "cache": undefined,
  "handler": Object {
    "test": [Circular],
  },
  "issuer": undefined,
  "keystore": undefined,
  "logger": undefined,
  "metadata": undefined,
  "metrics": undefined,
  "repository": undefined,
  "token": undefined,
}
`;

exports[`controllerMiddleware should set handler with specific key 1`] = `
Test {
  "agent": undefined,
  "cache": undefined,
  "handler": Object {
    "otherKey": [Circular],
  },
  "issuer": undefined,
  "keystore": undefined,
  "logger": undefined,
  "metadata": undefined,
  "metrics": undefined,
  "repository": undefined,
  "token": undefined,
}
`;
